--- a/Docker_and_Spark/templates/result.html
+++ b/Docker_and_Spark/templates/result.html
@@ -3,7 +3,13 @@
 <html>
    <body>
 
+     <h1>Estimated Probabilities</h1>
+
       <table border = 1>
+        <tr>
+        <th>Species</th>
+        <th>Probability</th>
+        </tr>
          {% for key, value in result.items() %}
 
             <tr>
